# 2024-CPP-task2-Wrapper

./: CMakeLists.txt
src/: Subject.h  main.cpp  tech.h  temp  test.h
src/Arguments/: Argument.h  ArgumentBase.h  ArgumentManager.h  ArgumentWrapper.h  ArgumentWrapper1.h  ArgumentWrapper2.h
src/Engine/: CommandBase.h  Engine.h  EngineImpl.h
src/Test/: Document.h  test.h  text.txt
src/Wrapper/: ArgsContainer.h  Wrapper.h
